--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22fe8c55",
+   "id": "b87ed0d9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8181f096",
+   "id": "2832d34a",
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +37,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "394f4886",
+   "cell_type": "markdown",
+   "id": "cf76f697",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Agenda\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
