--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b87ed0d9",
+   "id": "2f100643",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2832d34a",
+   "id": "f01dfba1",
    "metadata": {},
    "outputs": [
     {
@@ -38,11 +38,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf76f697",
+   "id": "62a9a7cd",
    "metadata": {},
    "source": [
     "# Agenda\n",
-    "\n"
+    "\n",
+    "1. What is a programming language? What is Python?\n",
+    "2. Fundamentals of programming (1/2 of today)\n",
+    "    - Values\n",
+    "    - Printing on the screen\n",
+    "    - Variables\n",
+    "    - Operators\n",
+    "    - Getting input from the user\n",
+    "    - Conditions and equality\n",
+    "    - Making decisions with `if`/`else`\n",
+    "3. Numbers (Monday)\n",
+    "    - integers\n",
+    "    - floats\n",
+    "4. Strings (text), Monday\n",
+    "    - Creating strings (many different ways!)\n",
+    "    - Retrieving from strings\n",
+    "    - Immutability\n",
+    "    - Methods (and methods vs. functions)\n",
+    "    - Converting from numbers to text, and back\n",
+    "5. Loops (\n"
    ]
   }
  ],
