--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f100643",
+   "id": "4ccf160d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f01dfba1",
+   "id": "32aeec4d",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a9a7cd",
+   "id": "5a8a2b30",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -61,7 +61,26 @@
     "    - Immutability\n",
     "    - Methods (and methods vs. functions)\n",
     "    - Converting from numbers to text, and back\n",
-    "5. Loops (\n"
+    "5. Loops (Tuesday)\n",
+    "    - `for` and `while`\n",
+    "    - Looping a number of times\n",
+    "    - Indexes (or the lack thereof)\n",
+    "    - Controlling our loops with `break` and `continue`\n",
+    "6. Lists (Tuesday)\n",
+    "    - Creating them\n",
+    "    - Retrieving from them\n",
+    "    - How are lists similar to strings? How are they different?\n",
+    "    - List methods\n",
+    "7. Converting from strings to lists, and back (Tuesday)\n",
+    "    - `str.split` method that takes a string and returns a list\n",
+    "    - `str.join` method that takes a list and returns a string\n",
+    "8. Tuples (Tuesday)\n",
+    "    - How they're similar to and different from strings and lists\n",
+    "    - Converting from them to/from strings and lists\n",
+    "    - Creating and retrieving from tuples\n",
+    "    - Why do we care about them?\n",
+    "    - Tuple unpacking\n",
+    "- \n"
    ]
   }
  ],
