--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ccf160d",
+   "id": "f7f98a57",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32aeec4d",
+   "id": "bf979d54",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a8a2b30",
+   "id": "083a09e7",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -80,7 +80,22 @@
     "    - Creating and retrieving from tuples\n",
     "    - Why do we care about them?\n",
     "    - Tuple unpacking\n",
-    "- \n"
+    "9. Dictionaries (Wednesday)\n",
+    "    - Creating them\n",
+    "    - Using them (3 paradigms) \n",
+    "    - Looping over them\n",
+    "    - Modifying them \n",
+    "    - How do dicts work behind the scenes?\n",
+    "10. Files (Wednesday)\n",
+    "    - Reading from text files\n",
+    "    - Writing (a little) to text files\n",
+    "    - Looping and text files\n",
+    "11. Get Python + PyCharm to work on your own computer (Wednesday)\n",
+    "12. Functions (Thursday)\n",
+    "    - Defining functions\n",
+    "    - Passing arguments to functions\n",
+    "    - Return values\n",
+    "    - Local vs. global variables\n"
    ]
   }
  ],
