--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7f98a57",
+   "id": "8535fe24",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf979d54",
+   "id": "8ac5e6e0",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "083a09e7",
+   "id": "218283b6",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -95,8 +95,22 @@
     "    - Defining functions\n",
     "    - Passing arguments to functions\n",
     "    - Return values\n",
-    "    - Local vs. global variables\n"
+    "    - Local vs. global variables\n",
+    "13. Modules and packages (Thursday)\n",
+    "    - What are modules?\n",
+    "    - Using modules with `import`\n",
+    "    - The Python standard library (i.e., modules that come with Python)\n",
+    "    - PyPI (i.e., modules that we can get from the Internet)\n",
+    "    - Downloading modules with `pip` for use in our own programs\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eae2520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
