--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bf77bec6",
+   "id": "c4b6642f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6e422c7",
+   "id": "0f0b9f28",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c5dda0",
+   "id": "82f4d20b",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -105,12 +105,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "035ccc31",
+   "cell_type": "markdown",
+   "id": "60170595",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Quick intro to Jupyter\n",
+    "\n",
+    "Jupyter gives us the sense/illusion that we are writing Python in our browsers. In reality, it's running on a server.\n",
+    "\n",
+    "When we type into Jupyter, we're typing into a *cell*. Actually, there are two different modes in Jupyter, and the current mode determines what happens when we type:\n",
+    "\n",
+    "- In edit mode, typing puts text into the cell. (Like right now!) To get into edit mode, click in the cell or press ENTER. (Green outline, and to the left.)\n",
+    "- In command mode, typing sends commands (usually one-letter commands) to Jupyter, and controls the environment. To get into command mode, click to the left of the cel"
+   ]
   }
  ],
  "metadata": {
