--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4b6642f",
+   "id": "045d90bd",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f0b9f28",
+   "id": "5ec41538",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f4d20b",
+   "id": "d9561584",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60170595",
+   "id": "cac68281",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -116,7 +116,13 @@
     "When we type into Jupyter, we're typing into a *cell*. Actually, there are two different modes in Jupyter, and the current mode determines what happens when we type:\n",
     "\n",
     "- In edit mode, typing puts text into the cell. (Like right now!) To get into edit mode, click in the cell or press ENTER. (Green outline, and to the left.)\n",
-    "- In command mode, typing sends commands (usually one-letter commands) to Jupyter, and controls the environment. To get into command mode, click to the left of the cel"
+    "- In command mode, typing sends commands (usually one-letter commands) to Jupyter, and controls the environment. To get into command mode, click to the left of the cell or press ESC.\n",
+    "\n",
+    "What commands can we use in Jupyter's command mode?\n",
+    "\n",
+    "- `c` -- copy the current cell\n",
+    "- `x` -- cut the current cell\n",
+    "- `v` -- paste the current cell"
    ]
   }
  ],
