--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "045d90bd",
+   "id": "ce829f3e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ec41538",
+   "id": "36afd7bf",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9561584",
+   "id": "8228f02e",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac68281",
+   "id": "642afe48",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -122,8 +122,22 @@
     "\n",
     "- `c` -- copy the current cell\n",
     "- `x` -- cut the current cell\n",
-    "- `v` -- paste the current cell"
+    "- `v` -- paste the current cell\n",
+    "- `a` -- create a new, empty cell *above* the current one\n",
+    "- `b` -- create a new, empty cell *below* the current one\n",
+    "- `m` -- make the cell a *Markdown* documentation cell\n",
+    "- `y` -- make the cell a *Python* coding cell\n",
+    "\n",
+    "Shift+ENTER executes the cell. If it's code, the code will run. If it's documentation, it'll get formatted."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87cec10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
