--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "37991fa2",
+   "id": "9fd969d4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f2f53e86",
+   "id": "6a0684b4",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e39fbf",
+   "id": "fe9bb348",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c172f8",
+   "id": "f7691dba",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -132,12 +132,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77bb1b15",
+   "cell_type": "markdown",
+   "id": "39da66f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What is a programming language?\n",
+    "\n",
+    "When computers were invented, each machine could solve one problem.  Pretty soon, they invented a general-purpose computer that could be programmed. You could write the 1s and 0s yourself, but that is tedious and error prone.\n",
+    "\n",
+    "Soon after that, they invented programming languages. There are hundreds of thousands of different programming languages, each with its own advantges and "
+   ]
   }
  ],
  "metadata": {
