--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9fd969d4",
+   "id": "69488f81",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a0684b4",
+   "id": "6a7c30cc",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe9bb348",
+   "id": "1b20b2ad",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7691dba",
+   "id": "ffcdadc3",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,14 +133,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39da66f5",
+   "id": "aa0f0a64",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
     "\n",
     "When computers were invented, each machine could solve one problem.  Pretty soon, they invented a general-purpose computer that could be programmed. You could write the 1s and 0s yourself, but that is tedious and error prone.\n",
     "\n",
-    "Soon after that, they invented programming languages. There are hundreds of thousands of different programming languages, each with its own advantges and "
+    "Soon after that, they invented programming languages. There are hundreds of thousands of different programming languages, each with its own advantges and disadvantages.\n",
+    "\n",
+    "- Assembly language\n",
+    "- C, C++\n",
+    "- Pascal, Lisp\n",
+    "- Python (and Perl, Ruby, PHP, JavaScript)\n",
+    "- Java and C#\n",
+    "\n",
+    "Python is:\n",
+    "- Not very fast at executing\n",
+    "- Very consistent"
    ]
   }
  ],
