--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69488f81",
+   "id": "5abe3e63",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a7c30cc",
+   "id": "ddfb74ee",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b20b2ad",
+   "id": "a45f12e1",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffcdadc3",
+   "id": "f14fcd4a",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa0f0a64",
+   "id": "146a88b7",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -150,7 +150,14 @@
     "\n",
     "Python is:\n",
     "- Not very fast at executing\n",
-    "- Very consistent"
+    "- Very consistent\n",
+    "- Very clean\n",
+    "- Very easy to read/write/debug\n",
+    "- Open source, with a huge community and lots of support and add-ons\n",
+    "\n",
+    "Python is used today:\n",
+    "- The #1 language for data science and analytics and machine learning\n",
+    "- Web development\n"
    ]
   }
  ],
