--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5abe3e63",
+   "id": "6616d1d5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ddfb74ee",
+   "id": "269c8049",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a45f12e1",
+   "id": "aa1e9fb7",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f14fcd4a",
+   "id": "0e421821",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146a88b7",
+   "id": "5a484bca",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -157,8 +157,21 @@
     "\n",
     "Python is used today:\n",
     "- The #1 language for data science and analytics and machine learning\n",
-    "- Web development\n"
+    "- Web development\n",
+    "- Automated testing\n",
+    "- Devops and server automation\n",
+    "- APIs (serving and consuming)\n",
+    "- Natural language processing\n",
+    "- Education"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9fa1f32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
