--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6616d1d5",
+   "id": "2ea8c61e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "269c8049",
+   "id": "d079a2d3",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1e9fb7",
+   "id": "03e0fa6b",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e421821",
+   "id": "0a4a4d15",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a484bca",
+   "id": "24e0097f",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -166,9 +166,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aff7fdd2",
+   "metadata": {},
+   "source": [
+    "# Our Jupyter server\n",
+    "\n",
+    "I've set up a server at https://python.lerner.co.il, where you can create your own Jupyter notebooks.\n",
+    "\n",
+    "1. Go there, and create a new Python 3 notebook (\"new\" menu on the right)\n",
+    "2. Click on the title to change it to be your name + the date\n",
+    "3. Inside of a cell, try to use the `print` function with some text (inside of quotes) to say \"hello\"\n",
+    "\n",
+    "```python\n",
+    "print('hello')\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fa1f32",
+   "id": "bea43619",
    "metadata": {},
    "outputs": [],
    "source": []
