--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "ba798f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello :)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "636fbfd3",
+   "id": "5fb69b85",
    "metadata": {},
    "outputs": [],
    "source": []
