--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -2,12 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "413cb274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "89826e39",
+   "id": "cb83beb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (\"hello\")"
+    "print ('hello')"
    ]
   }
  ],
