--- a/Dmitrii savetest.ipynb
+++ b/Dmitrii savetest.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "44306042",
+   "execution_count": 1,
+   "id": "8c6453ad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello :)\n"
+      "Hello there!\n"
      ]
     }
    ],
    "source": [
-    "print ('hello :)')"
+    "print ('Hello there!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a836bd5d",
+   "id": "280b97e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print ('hello')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
