--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba798f88",
+   "id": "32c48d4c",
    "metadata": {},
    "outputs": [
     {
@@ -21,10 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb69b85",
+   "id": "0f6655a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This is how you c"
+   ]
   }
  ],
  "metadata": {
