--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1886b65e",
+   "id": "26913a83",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "939aef91",
+   "id": "5a0421f8",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4211dc89",
+   "id": "3691ca4d",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ff6375",
+   "id": "5113336f",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98548675",
+   "id": "74c48c32",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247e4f9a",
+   "id": "a2a7fb95",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -184,12 +184,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c992dec7",
+   "metadata": {},
+   "source": [
+    "# Printing text and numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "772dd831",
+   "id": "da995a02",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I can use \"print\" to display things\n",
+    "# These are comments, completely ignored by Python\n",
+    "# they start with #, and go to the end of the line"
+   ]
   }
  ],
  "metadata": {
