--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f14d6b9",
+   "id": "07e5f6cb",
    "metadata": {},
    "outputs": [
     {
@@ -20,11 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4f8e35",
+   "execution_count": 2,
+   "id": "f74578dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#comment "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d7d0c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()"
+   ]
   }
  ],
  "metadata": {
