--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32c48d4c",
+   "id": "6e998628",
    "metadata": {},
    "outputs": [
     {
@@ -20,12 +20,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "fc6a8130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is how you comment your code\n",
+    "print(5+2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0f6655a7",
+   "id": "0ff5d9ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is how you c"
+    "print(\"Hello\" +\"Wo\")"
    ]
   }
  ],
