--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26913a83",
+   "id": "558cb253",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a0421f8",
+   "id": "89eb05e8",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3691ca4d",
+   "id": "1b880706",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5113336f",
+   "id": "a0e71a47",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c48c32",
+   "id": "e8ec205e",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a7fb95",
+   "id": "9a6da42f",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c992dec7",
+   "id": "a95d9e8f",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -193,15 +193,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da995a02",
+   "execution_count": 3,
+   "id": "b3611637",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, out there!\n"
+     ]
+    }
+   ],
    "source": [
     "# I can use \"print\" to display things\n",
     "# These are comments, completely ignored by Python\n",
-    "# they start with #, and go to the end of the line"
+    "# they start with #, and go to the end of the line\n",
+    "\n",
+    "# \"print\" is a function, a *verb* in Python\n",
+    "# we execute it by having () after the word \"print\"\n",
+    "# inside of the parentheses, we can have any Python value\n",
+    "\n",
+    "print('Hello, out there!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "df7422b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "601ad32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5 + 2)   # first, Python executes 5+2, gets 7, then print is invoked with 7 as an argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aefa63c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello, ' + 'world')  # + works between two text strings, too!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c8de699b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello,world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what if I don't put a space at the end of the first string?\n",
+    "print('hello,' + 'world')  # + works between two text strings, too!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e69cfc35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
