--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e998628",
+   "id": "5a2be36d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc6a8130",
+   "id": "94c98778",
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +39,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "d9ace51f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, \" +\"World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ff5d9ed",
+   "id": "357997a8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"Hello\" +\"Wo\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
