--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "558cb253",
+   "id": "06b440ea",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89eb05e8",
+   "id": "e3cb9d56",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b880706",
+   "id": "3e48c501",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e71a47",
+   "id": "e351d74c",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ec205e",
+   "id": "2cb2cec8",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6da42f",
+   "id": "d25c3fa3",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a95d9e8f",
+   "id": "c6a45606",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b3611637",
+   "id": "997ca579",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df7422b0",
+   "id": "f3f85b7b",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "601ad32b",
+   "id": "b52a7ca8",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aefa63c1",
+   "id": "066f2d30",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8de699b",
+   "id": "f5a0e98e",
    "metadata": {},
    "outputs": [
     {
@@ -293,10 +293,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69cfc35",
+   "id": "5edf8aa9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# what happens if I add things together a bit"
+   ]
   }
  ],
  "metadata": {
