--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02a1800a",
+   "id": "d23bc81e",
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,32 @@
    "source": [
     "print('hello Cisconians')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891e02da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74dc34ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd48420",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
