--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44306042",
+   "id": "27e71efd",
    "metadata": {},
    "outputs": [
     {
@@ -20,13 +20,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "686996ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5+2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"5+2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a836bd5d",
+   "id": "22fa5445",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print ('hello')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
