--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "06b440ea",
+   "id": "b8c27d86",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e3cb9d56",
+   "id": "050cf0d7",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e48c501",
+   "id": "071f89d5",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e351d74c",
+   "id": "4850c930",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb2cec8",
+   "id": "84472b40",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25c3fa3",
+   "id": "047ee9d8",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a45606",
+   "id": "aae7be44",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "997ca579",
+   "id": "9ff683b5",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f3f85b7b",
+   "id": "a191bd79",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b52a7ca8",
+   "id": "f1d90e6e",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "066f2d30",
+   "id": "c424e17c",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f5a0e98e",
+   "id": "53b01246",
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +292,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "677ec0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what happens if I add things together a bit differently?\n",
+    "print('5' + '2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "832c5531",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# what if I try to add together an integer and a text string?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mYour favorite number is \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "# what if I try to add together an integer and a text string?\n",
+    "print('Your favorite number is ' + 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5edf8aa9",
+   "id": "735c9438",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# what happens if I add things together a bit"
-   ]
+   "source": []
   }
  ],
  "metadata": {
