--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5a2be36d",
+   "id": "73f02094",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94c98778",
+   "id": "76fa2921",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9ace51f",
+   "id": "b05bd20d",
    "metadata": {},
    "outputs": [
     {
@@ -57,11 +57,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "63292daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"5\"+\"2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "357997a8",
+   "id": "1748a079",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Your favorite nu\")"
+   ]
   }
  ],
  "metadata": {
