--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d23bc81e",
+   "id": "e911d758",
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891e02da",
+   "id": "8a216fbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print "
+    "print ()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74dc34ce",
+   "id": "6692696e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd48420",
+   "id": "9d5ec109",
    "metadata": {},
    "outputs": [],
    "source": []
