--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27e71efd",
+   "id": "9808a115",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "686996ef",
+   "id": "af1be1d3",
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +38,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "a984a143",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (5+2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "22fa5445",
+   "id": "05ee3a9d",
    "metadata": {},
    "outputs": [],
    "source": []
